--- a/src/app/shared/components/change-location-modal/change-location-modal.component.html
+++ b/src/app/shared/components/change-location-modal/change-location-modal.component.html
@@ -11,7 +11,7 @@
         <div class="flex flex-wrap max-xl:flex-col justify-center items-center w-full h-full gap-4 p-2"
             *ngIf="data?.locations && data?.locations?.length">
             <div (click)="selectLocation(i, item?.attributes?.port?.id)"
-                [ngClass]="{'border border-primary': selectedLocations.includes(item?.attributes?.id)}"
+                [ngClass]="{'border border-primary': selectedLocations.includes(item?.attributes?.port?.id)}"
                 class="flex grow min-xl:w-1/4 flex-col shadow-lg cursor-pointer min-lg:max-w-[390px] max-md:w-full"
                 *ngFor="let item of data.locations | filter: search : 'attributes?.port?.name'; let i = index;">
                 <div class="text-center">
